added non-crud framework possibility and added 2 create build tests

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <log4j.version>2.22.1</log4j.version>
         <allure.version>2.29.0</allure.version>
         <jackson.version>2.17.2</jackson.version>
+        <awaitility.version>4.2.2</awaitility.version>
     </properties>
 
     <dependencies>
@@ -67,6 +68,11 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
         </dependency>
     </dependencies>
 
