--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 host=192.168.0.63:8111
-superUserToken=8511271556845862026
+superUserToken=1535450220681604146
 browser=firefox
 remote=http://localhost:4444/wd/hub
 browserSize=1920x1080
+timeout=15000
