--- a/.github/actions/teamcity-setup/action.yml
+++ b/.github/actions/teamcity-setup/action.yml
@@ -19,6 +19,11 @@ runs:
       run: |
           echo "HOST=$(ifconfig | grep -E "([0-9]{1,3}\.){3}[0-9]{1,3}" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1)" >> $GITHUB_ENV
 
+    - name: Setup host config property
+      shell: bash
+      # Add the host configuration to the application properties file
+      run: echo "host=$HOST:8111" >> src/main/resources/config.properties
+
     - name: Pull Selenoid browsers
       shell: bash
       # Parse browsers.json and pull all required browser images
