added superUserToken env

--- a/.github/actions/teamcity-setup/action.yml
+++ b/.github/actions/teamcity-setup/action.yml
@@ -66,3 +66,14 @@ runs:
       shell: bash
       # Extract the superuser authentication token from the TeamCity server logs
       run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
+
+    - name: Add superUserToken to config.properties
+      shell: bash
+      run: |
+        sed -i -e '$s/$/\n/' src/main/resources/config.properties
+
+        echo "superUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
+
+    - name: Display config.properties
+      shell: bash
+      run: cat src/main/resources/config.properties
