--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
     needs: [backend, frontend]
     uses: ./.github/workflows/automation.yml
     with:
-      package: ui
+      package: web
