--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -42,3 +42,17 @@ jobs:
         continue-on-error: true
         # Specify a test group to exclude setup-related tests
         run: ./mvnw test -Dtest='ru.gordeev.teamcity.${{inputs.package}}.**' -Dgroups=Regression
+
+      - name: Run Swagger Coverage
+        continue-on-error: true
+        if: ${{inputs.package == 'api'}}
+        run: .swagger-coverage-commandline/bin/swagger-coverage-commandline -s http://$HOST:8111/app/rest/swagger.json -i target/swagger-coverage-output
+
+      - name: Save Swagger Coverage
+        uses: actions/upload-artifact@v4
+        if: ${{inputs.package == 'api'}}
+        with:
+          name: swagger-coverage
+          path: |
+              swagger-coverage-report.html
+              swagger-coverage-results.json
