added steps to page object pages

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,17 @@
             <artifactId>swagger-coverage-rest-assured</artifactId>
             <version>${swagger-coverage-version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>${allure.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
