--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -54,5 +54,30 @@ jobs:
         with:
           name: swagger-coverage
           path: |
-              swagger-coverage-report.html
-              swagger-coverage-results.json
+            swagger-coverage-report.html
+            swagger-coverage-results.json
+
+      - name: Load test report history
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.7
+        if: always()
+        with:
+          gh_pages: gh-pages
+          allure_history: allure-history
+          allure_results: target/allure-results
+          subfolder: ${{ inputs.package }}
+
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v4
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
