added last steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,19 @@ jobs:
     uses: ./.github/workflows/automation.yml
     with:
       package: web
+
+  manual-prod-approval:
+    needs: [automation-ui, automation-api]
+    runs-on: ubuntu-latest
+    environment: 'production'
+    steps:
+      - name: Approve backend and frontend to production
+        run: echo Release approved
+
+  deploy-prod:
+    needs: manual-prod-approval
+    runs-on: ubuntu-latest
+    # Mock echo run, just to show the final step
+    steps:
+      - name: Running backend and frontend deployment
+        run: echo Deployment started...
