added teamcity-agent setup

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,13 @@ jobs:
       package: api
 
   # Run UI tests after backend and frontend jobs are completed
-  automation-ui:
+  automation-web:
     needs: [backend, frontend]
     uses: ./.github/workflows/automation.yml
     with:
       package: web
 
+  # Wait for manual approval from authorized users
   manual-prod-approval:
     needs: [automation-ui, automation-api]
     runs-on: ubuntu-latest
@@ -33,10 +34,10 @@ jobs:
       - name: Approve backend and frontend to production
         run: echo Release approved
 
+  # If approval is successful, proceed with the production deployment
   deploy-prod:
     needs: manual-prod-approval
     runs-on: ubuntu-latest
-    # Mock echo run, just to show the final step
     steps:
       - name: Running backend and frontend deployment
         run: echo Deployment started...
