--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -38,6 +38,9 @@ jobs:
       - name: TeamCity setup
         uses: ./.github/actions/teamcity-setup
 
+      - name: TeamCity-Agent setup
+        uses: ./.github/actions/teamcity-agent-setup
+
       - name: Run tests
         continue-on-error: true
         # Specify a test group to exclude setup-related tests
