--- a/.github/actions/teamcity-setup/action.yml
+++ b/.github/actions/teamcity-setup/action.yml
@@ -1,5 +1,10 @@
 name: Teamcity Setup
 
+inputs:
+  package:
+    description: api | web
+    required: true
+
 runs:
   using: composite
   steps:
@@ -25,6 +30,7 @@ runs:
       run: echo "host=$HOST:8111" >> src/main/resources/config.properties
 
     - name: Pull Selenoid browsers
+      if: ${{ inputs.package != 'api' }}
       shell: bash
       # Parse browsers.json and pull all required browser images
       run: |
@@ -33,6 +39,7 @@ runs:
         done
 
     - name: Run Selenoid
+      if: ${{ inputs.package != 'api' }}
       shell: bash
       # Use the -d flag to run the container in detached mode
       run: |
